--- a/frontend/src/app/demand/empform/empform.component.html
+++ b/frontend/src/app/demand/empform/empform.component.html
@@ -13,7 +13,7 @@
                         [(ngModel)]="empModel.empName">
                     <input type="text" name="empRole" class="form-control" placeholder="Role"
                         [(ngModel)]="empModel.empRole">
-                    <button class="save-btn" (click)="onSubmitForm()">Save</button>
+                    <button style=" background-color: #337ab7" class="save-btn" (click)="onSubmitForm()"><font style = "color: white">Save</font></button>
                 </form>
             </div>
         </div>
