--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -351,7 +351,7 @@
 	<div class="row">
 		<div class="col-lg-6">
 			<h2>Grad Management</h2>
-			<p>The Modern Business template by Start Bootstrap includes:</p>
+			<p>Grad management system for handling the grads by admin</p>
 			<strong>Functionalities: </strong>
 
 			<ul>				
@@ -359,9 +359,7 @@
 				<li> Admin can see and filter the details of all the employees based on employee Id.</li>
 				<li>Admin can click on an employee id to visit the profile page of the employee</li>
 			</ul>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id
-				reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia
-				dolorum ducimus unde.</p>
+			<p> Management helps in organizing the personal information of the new employees in a structured manner. As it creates a profile page of each of the new employees based on the details entered by him/her. And the admin can see the details of all new employees joining in a particular session. </p>
 		</div>
 		<div class="col-lg-6">
 			<!-- 				<img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
@@ -375,19 +373,17 @@
 	<div class="row">
 		<div class="col-lg-6">
 			<h2>Course Management</h2>
-			<p>The Modern Business template by Start Bootstrap includes:</p>
+			<p>Managing the courses/p>
+			<strong>Bootstrap v4</strong>
+
 			<ul>
-				<li>
-					<strong>Bootstrap v4</strong>
-				</li>
-				<li>jQuery</li>
-				<li>Font Awesome</li>
-				<li>Working contact form with validation</li>
-				<li>Unstyled page elements for easy customization</li>
+				<li>Add/Delete course.</li>
+				<li>Add/Delete trainer and their corresponding courses.</li>
+				<li>Add/Modify batch.</li>
+				<li>Add/Delete session in a batch.</li>
+				<li>View the timesheet.</li>
 			</ul>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id
-				reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia
-				dolorum ducimus unde.</p>
+			<p>Course Management helps the grads in viewing their timesheet for the entire training period. It also provides admin an easy way to manage sessions for different batches.</p>
 		</div>
 		<div class="col-lg-6">
 			<img width="500" height="300" class="img-fluid rounded" src="../../../assets/Images/coursemanagement.jpg"
@@ -399,19 +395,15 @@
 	<div class="row">
 		<div class="col-lg-6">
 			<h2>Employee Demand</h2>
-			<p>The Modern Business template by Start Bootstrap includes:</p>
-			<ul>
-				<li>
-					<strong>Bootstrap v4</strong>
-				</li>
-				<li>jQuery</li>
-				<li>Font Awesome</li>
-				<li>Working contact form with validation</li>
-				<li>Unstyled page elements for easy customization</li>
+			<p>Checking the employee and his demand as a trainer</p>
+			<strong>Functions: </strong>
+
+			<ul>				
+				<li> Add employee and their roles.</li>
+				<li> Add demand for particular ED at certain location.</li>
+				<li> View the demand details for all the ED's. </li>
 			</ul>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id
-				reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia
-				dolorum ducimus unde.</p>
+			<p>It will add the new employee and their roles.It can select the ED,HM and demand count at particular location.The demand details can be viewed in structured manner.</p>
 		</div>
 
 		<div class="col-lg-6">
@@ -424,19 +416,18 @@
 	<div class="row">
 		<div class="col-lg-6">
 			<h2>Score</h2>
-			<p>The Modern Business template by Start Bootstrap includes:</p>
+			<p> Score calculations of AU batch</p>
+			<strong>Functionalities: </strong>
 			<ul>
-				<li>
-					<strong>Bootstrap v4</strong>
-				</li>
-				<li>jQuery</li>
-				<li>Font Awesome</li>
-				<li>Working contact form with validation</li>
-				<li>Unstyled page elements for easy customization</li>
+				<li>Displays the assessment scores and ranking of grads</li>
+				<li>Filter employee details based on employee name</li>
+				<li>Enables to enter the details of tests given by grads</li>
 			</ul>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id
-				reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia
-				dolorum ducimus unde.</p>
+			<p>Assessment Management module records and displays the assessment details of employees. 
+
+				Filters can be applied to fetch the details of tests given by particular employee. 
+				
+				Details of new tests given by grads can also be added.</p>
 		</div>
 
 		<div class="col-lg-6">
@@ -483,5 +474,5 @@
 </html> -->
 
 <footer class="container-fluid text-center" style=" background-color: #f2f2f2;padding: 25px;margin-top: 30px">
-	<p style="text-align: center">Only the Best Technical Minds</p>
+	<p style="text-align: center">AU batch at Accolite</p>
   </footer>
