--- a/frontend/src/app/report/front/front.component.html
+++ b/frontend/src/app/report/front/front.component.html
@@ -24,7 +24,7 @@
                 <span class="glyphicon glyphicon-search"></span> Search
               </button>
               
-              <button type="button" class="btn btn-default"  routerLink="newDetails"> 
+              <button type="button" class="btn btn-default"  (click)="sample()" routerLink="newDetails"> 
                 <span class="glyphicon glyphicon-plus"></span>Add Details
               </button>
                 <!-- <button type="button" class="button"  routerLink="/newDetails">Add Details</button>      -->
