--- a/frontend/src/app/demand/demanddetails/demanddetails.component.css
+++ b/frontend/src/app/demand/demanddetails/demanddetails.component.css
@@ -2,12 +2,12 @@
     width:100%;
     padding: 10px 15px;
     text-align: left;
-    background-color: #d6d6d6;
+    background-color: #337ab7;
     border: none;
     margin: 5px 0px;
     font-family: Arial, sans-serif;
     font-size: 16px;
-    color: #494949;
+    color: white;
     font-weight: bold;
     border-radius: 5px;
 }
