--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -373,8 +373,7 @@
 	<div class="row">
 		<div class="col-lg-6">
 			<h2>Course Management</h2>
-			<p>Managing the courses/p>
-			<strong>Bootstrap v4</strong>
+			<p>Managing the courses</p>
 
 			<ul>
 				<li>Add/Delete course.</li>
