--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -482,6 +482,104 @@
 
 </html> -->
 
-<footer class="container-fluid text-center" style=" background-color: #f2f2f2;padding: 25px;margin-top: 30px">
+<!-- <footer class="container-fluid text-center" style=" background-color: #f2f2f2;padding: 25px;margin-top: 30px">
 	<p style="text-align: center">Only the Best Technical Minds</p>
-  </footer>
+  </footer> -->
+
+  <!-- Footer -->
+<footer class="page-footer font-small unique-color-dark" style="width: 100%">
+
+	
+		<!-- Footer Links -->
+		<div class=" text-center text-md-left mt-5" style="background-color: black">
+	
+		  <!-- Grid row -->
+		  <div class="row mt-3">
+	
+			<!-- Grid column -->
+			<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+	
+			  <!-- Content -->
+			  <h6 class="text-uppercase font-weight-bold" style="color: white">Company name</h6>
+			  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+			  <p style="color: white">Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing
+				elit.
+			  </p>
+	
+			</div>
+			<!-- Grid column -->
+	
+			<!-- Grid column -->
+			<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="color: white">
+	
+			  <!-- Links -->
+			  <h6 class="text-uppercase font-weight-bold">Products</h6>
+			  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+			  <p>
+				<a href="#!">MDBootstrap</a>
+			  </p>
+			  <p>
+				<a href="#!">MDWordPress</a>
+			  </p>
+			  <p>
+				<a href="#!">BrandFlow</a>
+			  </p>
+			  <p>
+				<a href="#!">Bootstrap Angular</a>
+			  </p>
+	
+			</div>
+			<!-- Grid column -->
+	
+			<!-- Grid column -->
+			<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" style="color: white">
+	
+			  <!-- Links -->
+			  <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+			  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+			  <p>
+				<a href="#!">Your Account</a>
+			  </p>
+			  <p>
+				<a href="#!">Become an Affiliate</a>
+			  </p>
+			  <p>
+				<a href="#!">Shipping Rates</a>
+			  </p>
+			  <p>
+				<a href="#!">Help</a>
+			  </p>
+	
+			</div>
+			<!-- Grid column -->
+	
+			<!-- Grid column -->
+			<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" style="color: white">
+	
+			  <!-- Links -->
+			  <h6 class="text-uppercase font-weight-bold">Contact</h6>
+			  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+			  <p>
+				<mdb-icon fas icon="home" class="mr-3"></mdb-icon> New York, NY 10012, US
+			  </p>
+			  <p>
+				<mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> info@example.com
+			  </p>
+			  <p>
+				<mdb-icon fas icon="phone" class="mr-3"></mdb-icon> + 01 234 567 88
+			  </p>
+			  <p>
+				<mdb-icon fas icon="print" class="mr-3"></mdb-icon> + 01 234 567 88
+			  </p>
+	
+			</div>
+	
+		  </div>
+	
+		</div>
+	
+		<div class="footer-copyright text-center py-3">© 2018 Copyright:
+		  <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+		</div>
+	
+	  </footer>
