--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,19 +10,19 @@
           
           <li [ngClass]="arg=='grad'? 'nav-link active':'nav-link'" class="nav-item dropdown">
             <a  *ngIf = "admin|| grad" style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-            (click)="activefunc('grad')" aria-expanded="false">
+             aria-expanded="false">
               Grad
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div (click)="activefunc('grad')" class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a *ngIf = "admin"routerLink="/admin">Grad Details</a></li>
                 <li><a *ngIf="grad || admin" routerLink="/grads/fill">Add Details</a></li>
             </div>
           </li>   
           <li [ngClass]="arg=='course'? 'nav-link active':'nav-link'" class="nav-item dropdown">
-              <a (click)="activefunc('course')" style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a  style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Course
               </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <div (click)="activefunc('course')" class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a  routerLink="/view">Timesheets</a></li>
                   <li><a *ngIf="admin " routerLink="/course">Courses</a></li>
                   <li><a *ngIf="admin" routerLink="/trainer">Trainers</a></li>
@@ -45,10 +45,10 @@
   
             <li [ngClass]="arg=='score'? 'nav-link active':'nav-link'"><a   *ngIf="admin || trainer"  style="color:white" routerLink='/score' (click)="activefunc('score')">Score</a></li>
             <li [ngClass]="arg=='ed'? 'nav-link active':'nav-link'" class="nav-item dropdown">
-              <a *ngIf="admin " (click)="activefunc('ed')" style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a *ngIf="admin "  style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Employee Demand
               </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <div (click)="activefunc('ed')" class="dropdown-menu" aria-labelledby="navbarDropdown">
   <!--                 <li><a  routerLink="/view">Timesheets</a></li>
    -->                <li><a *ngIf="admin " routerLink="/demand/empform"> Add Employee</a></li>
                   <li><a *ngIf="admin" routerLink="/demand/demandform">Add Demand</a></li>
