--- a/frontend/src/app/main/frontpage/frontpage.component.html
+++ b/frontend/src/app/main/frontpage/frontpage.component.html
@@ -29,8 +29,8 @@
         <div class="icons">
          <div class="col-xs-3">
              <ul class="nav navbar-nav navbar-right" style="font-size: 15px">
-                 <li><a href="signup"><span class="glyphicon glyphicon-user" routerLink="signup" ></span ><font style="color:white"> Sign Up </font></a></li>
-                 <li><a href="login"><span class="glyphicon glyphicon-log-in" routerLink="login"></span><font style="color:white"> Login </font> </a></li>
+                 <li><a href="signup"><span class="glyphicon glyphicon-user" routerLink="signup" ><font style="color:white"> Sign Up </font></span ></a></li>
+                 <li><a href="login"><span class="glyphicon glyphicon-log-in" routerLink="login"><font style="color:white"> Login </font> </span ></a></li>
                </ul>
            
          </div>  
