--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -489,58 +489,39 @@
   <!-- Footer -->
 <footer class="page-footer font-small unique-color-dark" style="width: 100%">
 
-	
-		<!-- Footer Links -->
 		<div class=" text-center text-md-left mt-5" style="background-color: black">
 	
-		  <!-- Grid row -->
 		  <div class="row mt-3">
 	
-			<!-- Grid column -->
 			<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-	
-			  <!-- Content -->
-			  <h6 class="text-uppercase font-weight-bold" style="color: white">Company name</h6>
+			  <h6 class="text-uppercase font-weight-bold" style="color: white">Accolite</h6>
 			  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-			  <p style="color: white">Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing
-				elit.
+			  <p style="color: white">Accolite is a global IT Services company headquartered in Dallas, USA with offices in India. Recognized for providing cutting edge information technology services with a proven track record of being totally client focussed, Accolite promises efficient, affordable and on-time IT services.
 			  </p>
-	
 			</div>
-			<!-- Grid column -->
-	
-			<!-- Grid column -->
 			<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="color: white">
-	
-			  <!-- Links -->
-			  <h6 class="text-uppercase font-weight-bold">Products</h6>
+			  <h6 class="text-uppercase font-weight-bold">Clients</h6>
 			  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 			  <p>
-				<a href="#!">MDBootstrap</a>
+				<a href="https://www.morganstanley.com/">Morgan Stanley</a>
 			  </p>
 			  <p>
-				<a href="#!">MDWordPress</a>
+				<a href="https://www.fedex.com/global/choose-location.html">Fedex</a>
 			  </p>
-			  <p>
+			  <!-- <p>
 				<a href="#!">BrandFlow</a>
 			  </p>
 			  <p>
 				<a href="#!">Bootstrap Angular</a>
-			  </p>
-	
+			  </p>	 -->
 			</div>
-			<!-- Grid column -->
-	
-			<!-- Grid column -->
 			<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" style="color: white">
-	
-			  <!-- Links -->
 			  <h6 class="text-uppercase font-weight-bold">Useful links</h6>
 			  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 			  <p>
-				<a href="#!">Your Account</a>
+				<a href="http://accolite.com/">Home</a>
 			  </p>
-			  <p>
+			  <!-- <p>
 				<a href="#!">Become an Affiliate</a>
 			  </p>
 			  <p>
@@ -548,28 +529,23 @@
 			  </p>
 			  <p>
 				<a href="#!">Help</a>
-			  </p>
+			  </p> -->
 	
 			</div>
-			<!-- Grid column -->
-	
-			<!-- Grid column -->
 			<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" style="color: white">
-	
-			  <!-- Links -->
 			  <h6 class="text-uppercase font-weight-bold">Contact</h6>
 			  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 			  <p>
-				<mdb-icon fas icon="home" class="mr-3"></mdb-icon> New York, NY 10012, US
+				 Bangalore, Karnataka
 			  </p>
 			  <p>
-				<mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> info@example.com
+				 info@example.com
 			  </p>
 			  <p>
-				<mdb-icon fas icon="phone" class="mr-3"></mdb-icon> + 01 234 567 88
+				 + 01 234 567 88
 			  </p>
 			  <p>
-				<mdb-icon fas icon="print" class="mr-3"></mdb-icon> + 01 234 567 88
+				 + 01 234 567 88
 			  </p>
 	
 			</div>
