--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -511,6 +511,9 @@
 			  <p>
 				<a href="http://accolite.com/">Home</a>
 			  </p>
+			  <p>
+				<a href="http://accolite.com/contact.php">Help</a>
+			  </p>   
 			  <!-- <p>
 				<a href="#!">Become an Affiliate</a>
 			  </p>
@@ -529,13 +532,10 @@
 				 Bangalore, Karnataka
 			  </p>
 			  <p>
-				 info@example.com
+				Telephone: +1 972-586-7778				 
 			  </p>
 			  <p>
-				 + 01 234 567 88
-			  </p>
-			  <p>
-				 + 01 234 567 88
+				Tollfree: +1 888-993-8999
 			  </p>
 	
 			</div>
