--- a/frontend/src/app/main/frontpage/frontpage.component.html
+++ b/frontend/src/app/main/frontpage/frontpage.component.html
@@ -84,10 +84,80 @@
        </div>
        </div>
    </div>
+   <br>
  
    
-    <footer class="container-fluid text-center" style=" background-color: #f2f2f2;padding: 25px;margin-top: 30px">
-       <p style="text-align: center">Only the Best Technical Minds</p>
-     </footer>
+   <footer class="page-footer font-small unique-color-dark" style="width: 100%">
+
+		<div class=" text-center text-md-left mt-5" style="background-color: black">
+	
+		  <div class="row mt-3">
+	
+			<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+			  <h6 class="text-uppercase font-weight-bold" style="color: white">Accolite</h6>
+			  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+			  <p style="color: white">Accolite is a global IT Services company headquartered in Dallas, USA with offices in India. Recognized for providing cutting edge information technology services with a proven track record of being totally client focussed, Accolite promises efficient, affordable and on-time IT services.
+			  </p>
+			</div>
+			<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="color: white">
+			  <h6 class="text-uppercase font-weight-bold">Clients</h6>
+			  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+			  <p>
+				<a href="https://www.morganstanley.com/">Morgan Stanley</a>
+			  </p>
+			  <p>
+				<a href="https://www.fedex.com/global/choose-location.html">Fedex</a>
+			  </p>
+			  <!-- <p>
+				<a href="#!">BrandFlow</a>
+			  </p>
+			  <p>
+				<a href="#!">Bootstrap Angular</a>
+			  </p>	 -->
+			</div>
+			<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" style="color: white">
+			  <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+			  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+			  <p>
+				<a href="http://accolite.com/">Home</a>
+			  </p>
+			  <p>
+				<a href="http://accolite.com/contact.php">Help</a>
+			  </p>   
+			  <!-- <p>
+				<a href="#!">Become an Affiliate</a>
+			  </p>
+			  <p>
+				<a href="#!">Shipping Rates</a>
+			  </p>
+			  <p>
+				<a href="#!">Help</a>
+			  </p> -->
+	
+			</div>
+			<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" style="color: white">
+			  <h6 class="text-uppercase font-weight-bold">Contact</h6>
+			  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+			  <p>
+				 Bangalore, Karnataka
+			  </p>
+			  <p>
+				Telephone: +1 972-586-7778				 
+			  </p>
+			  <p>
+				Tollfree: +1 888-993-8999
+			  </p>
+	
+			</div>
+	
+		  </div>
+	
+		</div>
+	
+		<div class="footer-copyright text-center py-3">© 2018 Copyright:
+		  <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+		</div>
+	
+	  </footer>
    
   
