--- a/frontend/src/app/gradManagement/gradmanagement/grad-details/grad-details.component.html
+++ b/frontend/src/app/gradManagement/gradmanagement/grad-details/grad-details.component.html
@@ -42,8 +42,8 @@
             <div class="col-md-4">
                 <div class="profile-work">
                     <p>LINKS</p>
-                    <a href="https://http://www.facebook.com/">facebook</a><br />
-                    <a href="https://www.linkedin.com/">linkedIn </a><br />
+                    <a href="https://http://www.facebook.com/">Facebook</a><br />
+                    <a href="https://www.linkedin.com/">LinkedIn </a><br />
                     <!-- <p>SKILLS</p>
                     <a href="">Web Designer</a><br />
                     <a href="">Web Developer</a><br />
