on active navbar  UI changes

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -46,6 +46,8 @@
 }
 .nav-link:hover{
     background-color:lightblue;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px; 
 }
 .nav-link{
     font-size: 20px;
@@ -55,7 +57,9 @@
 
 .navbar-nav > .active > a {
     // color: black;
-    background-color: lightblue ;    
+    background-color: lightblue ;  
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;  
   }
 //   .nav-item > a:hover {
 //     color: green;
