--- a/frontend/src/app/demand/demandform/demandform.component.css
+++ b/frontend/src/app/demand/demandform/demandform.component.css
@@ -9,12 +9,12 @@ p{
     text-align: center;
     float: right;
     width: 100%;
-    background-color: #d6d6d6;
+    background-color: #337ab7;
     border: none;
     margin: 5px 0px;
     font-family: Arial, sans-serif;
     font-size: 14px;
-    color: #494949;
+    color: white;
     /* border: 1px */
     font-weight: bold;
     border-radius: 5px;
@@ -24,13 +24,14 @@ label{
     font-family: Arial, sans-serif;
     font-size: 12px;
 }
-.card {
+.panel {
     margin-top:20px;
     border-width: 2px;
     border-radius: 10px;
+    box-align: center;
 }
-.card-title {
+.panel-heading {
     text-align: center;
     background-color: #f5f5f5;
-    height: 30px;
+    height: 40px;
 }
