--- a/frontend/src/app/demand/empform/empform.component.css
+++ b/frontend/src/app/demand/empform/empform.component.css
@@ -1,12 +1,12 @@
-.card {
+.panel {
     margin-top:20px;
     border-width: 2px;
     border-radius: 10px;
 }
-.card-title {
+.panel-heading {
     text-align: center;
     background-color: #f5f5f5;
-    height: 30px;
+    height: 40px;
 
 }
 .save-btn {
@@ -14,12 +14,12 @@
     text-align: center;
     float: right;
     width: 100%;
-    background-color: #d6d6d6;
+    background-color: #337ab7;
     border: none;
     margin: 5px 0px;
     font-family: Arial, sans-serif;
     font-size: 14px;
-    color: #494949;
+    color:white;
     /* border: 1px */
     font-weight: bold;
     border-radius: 5px;
