--- a/frontend/src/app/demand/empform/empform.component.html
+++ b/frontend/src/app/demand/empform/empform.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
-        <div class="card">
-            <div class="card-title">
+        <div class="panel panel-default">
+            <div class="panel-heading">
                 Employee Form
             </div>
-            <div class="card-body">
+            <div class="panel-body">
                 <form>
                     <input type="text " name="empId" class="form-control" placeholder="Employee Code"
                         [(ngModel)]="empModel.empId">
@@ -13,7 +13,7 @@
                         [(ngModel)]="empModel.empName">
                     <input type="text" name="empRole" class="form-control" placeholder="Role"
                         [(ngModel)]="empModel.empRole">
-                    <button style=" background-color: #337ab7" class="save-btn" (click)="onSubmitForm()"><font style = "color: white">Save</font></button>
+                    <button class="save-btn" (click)="onSubmitForm()">Save</button>
                 </form>
             </div>
         </div>
