--- a/frontend/src/app/report/front/front.component.css
+++ b/frontend/src/app/report/front/front.component.css
@@ -27,7 +27,7 @@ body{
 
 table  { border-collapse: collapse; width: 100%; }
 th, td { padding: 8px 16px; }
-th     { background:#eee; }
+th     { background:#337ab7; color: white}
 
 #searchByName, #searchById {
     width: 18%;
