--- a/frontend/src/app/report/student-details/student-details.component.css
+++ b/frontend/src/app/report/student-details/student-details.component.css
@@ -1,6 +1,6 @@
 body{
-  background-color: #eee;
-    font-family: 'Times New Roman', Times, serif;
+  /* background-color: #eee;
+    font-family: 'Times New Roman', Times, serif; */
     /* overflow: scroll; */
 }
 .tableFixHead          { overflow-y: auto; height: 500px; }
