--- a/frontend/src/app/main/frontpage/frontpage.component.scss
+++ b/frontend/src/app/main/frontpage/frontpage.component.scss
@@ -9,6 +9,10 @@
 /*     font-style: italic;
  */    color: lightblue;
 }
+.container-fluid {
+    padding: 0 !important;
+    background-color: #337ab7
+    }
 .title1{
     font-family: 'Times New Roman', Times, serif;
     font-size: 40px;
