--- a/assess-frontend/src/app/report/front/front.component.css
+++ b/assess-frontend/src/app/report/front/front.component.css
@@ -1,6 +1,6 @@
 body{
-    background-color: rgb(230, 234, 240);
-    font-family: 'Times New Roman', Times, serif;
+     /* background-color: rgb(230, 234, 240);  */
+    /* font-family: 'Times New Roman', Times, serif; */
     /* overflow: scroll; */
 }
 .container {
@@ -15,7 +15,7 @@ body{
     text-decoration: none;
     outline: none;
     color: #fff;
-    background-color: rgb(95, 93, 93);
+    background-color:#337ab7;
     border: none;
     border-radius: 5px;
     box-shadow: 0 1px #999;
@@ -27,15 +27,16 @@ body{
 
 table  { border-collapse: collapse; width: 100%; }
 th, td { padding: 8px 16px; }
-th     { background:#eee; }
+th     { background:#337ab7; }
 
 #searchByName, #searchById {
     width: 18%;
     padding: 6px 6px;
     margin: 5px 3px;
     box-sizing:border-box;
-    border: 4px ;
+    
     border-radius: 5px; 
+    border: 1px solid #cac8c8;
 }
 .spanclass{
 	white-space: pre;
