--- a/assess-frontend/src/app/report/student-details/student-details.component.css
+++ b/assess-frontend/src/app/report/student-details/student-details.component.css
@@ -1,25 +1,22 @@
 body{
-    background-color: rgb(230, 234, 240);
+  background-color: #eee;
     font-family: 'Times New Roman', Times, serif;
     /* overflow: scroll; */
 }
-.container {
-    display: inline-flex; /* or inline-flex */
-  }
-
 .tableFixHead          { overflow-y: auto; height: 500px; }
 .tableFixHead thead th { position: sticky; top: 0; }
 
 table  { border-collapse: collapse; width: 100%; }
 th, td { padding: 8px 16px; }
-th     { background:#eee; }
+th     { background:#337ab7; }
 
-.row{
-  background-color: #f9f9f9;
-  overflow-y: auto;
-  padding: 8px 16px;
-  /* height: 500px;
-  align-self: center;
-  align-content: center; */
-  border-collapse: collapse; width: 100%;
+input {
+    width: 18%;
+    margin: 5px 3px;
+    box-sizing:border-box;
+    border: 1px solid rgb(202, 200, 200);
+    border-radius: 5px;
+    padding: 3px;
+
+    
 }
