--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -6,7 +6,7 @@
  */    color:white;
 }
 .container-fluid{
-    height : 60px;
+    // height : 60px;
     background-color:#337ab7;
 }
 
@@ -33,7 +33,7 @@
  */    color:white;
 }
 .container-fluid{
-    height : 60px;
+    // height : 60px;
     background-color:#337ab7;
 }
 
