--- a/frontend/src/app/report/front/front.component.html
+++ b/frontend/src/app/report/front/front.component.html
@@ -24,12 +24,10 @@
                 <span class="glyphicon glyphicon-search"></span> Search
               </button>
               
-              <button type="button" class="btn btn-default"  (click)="sample()" routerLink="newDetails"> 
+              <!-- <button type="button" class="btn btn-default"  (click)="sample()" routerLink="newDetails"> 
                 <span class="glyphicon glyphicon-plus"></span>Add Details
-              </button>
-                <!-- <button type="button" class="button"  routerLink="/newDetails">Add Details</button>      -->
-            
-            <!-- <i style="font-size:24px;color:rgba(54, 53, 53, 0.644)" class="fa">&#xf002;</i> -->
+              </button> -->
+               
             <form [formGroup]="createAccountForm">  
             <div class="container">
                 
